--- a/waifu.css
+++ b/waifu.css
@@ -23,14 +23,14 @@
 }
 
 #waifu {
-	bottom: -1000px;
+	bottom: 0;
 	left: 0;
 	line-height: 0;
 	margin-bottom: -10px;
 	position: fixed;
 	transform: translateY(3px);
-	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
-	z-index: 1;
+	transition: transform 0.3s ease-in-out bottom 1s ease-in-out;
+	z-index: 69;
 }
 
 #waifu:hover {
@@ -39,27 +39,27 @@
 
 #waifu-tips {
 	animation: shake 50s ease-in-out 5s infinite;
-	background-color: rgba(236, 217, 188, .5);
-	border: 1px solid rgba(224, 186, 140, .62);
-	border-radius: 12px;
-	box-shadow: 0 3px 15px 2px rgba(191, 158, 118, .2);
-	font-size: 14px;
+	background-color: rgba(236, 217, 188, 0.34);
+	border: 1px solid rgba(224, 186, 140, 0.62);
+	border-radius: 1em;
+	box-shadow: 0 3px 15px 2px rgba(191, 158, 118, 0.2);
+	font-size: 12px;
 	line-height: 24px;
-	margin: -30px 20px;
-	min-height: 70px;
+	margin: -10px 20px;
 	opacity: 0;
 	overflow: hidden;
 	padding: 5px 10px;
 	position: absolute;
+	left: 0;
+	right: 0;
 	text-overflow: ellipsis;
 	transition: opacity 1s;
-	width: 250px;
 	word-break: break-all;
 }
 
 #waifu-tips.waifu-tips-active {
 	opacity: 1;
-	transition: opacity .2s;
+	transition: opacity 0.3s;
 }
 
 #waifu-tips .fa-lg {
@@ -68,9 +68,9 @@
 
 #live2d {
 	cursor: grab;
-	height: 300px;
+	height: 270px;
 	position: relative;
-	width: 300px;
+	width: 270px;
 }
 
 #live2d:active {
@@ -81,7 +81,7 @@
 	color: #aaa;
 	opacity: 0;
 	position: absolute;
-	right: -10px;
+	right: 10px;
 	top: 70px;
 	transition: opacity 1s;
 }
@@ -96,20 +96,21 @@
 	display: block;
 	height: 30px;
 	text-align: center;
-	transition: color .3s;
+	transition: color 0.3s;
 }
 
 #waifu-tool .fa-lg:hover {
-	color: #0684bd; /* #34495e */
+	color: #0684bd;
+	/* #34495e */
 }
 
 @keyframes shake {
 	2% {
-		transform: translate(.5px, -1.5px) rotate(-.5deg);
+		transform: translate(0.5px, -1.5px) rotate(-0.5deg);
 	}
 
 	4% {
-		transform: translate(.5px, 1.5px) rotate(1.5deg);
+		transform: translate(0.5px, 1.5px) rotate(1.5deg);
 	}
 
 	6% {
@@ -117,27 +118,27 @@
 	}
 
 	8% {
-		transform: translate(2.5px, 1.5px) rotate(.5deg);
+		transform: translate(2.5px, 1.5px) rotate(0.5deg);
 	}
 
 	10% {
-		transform: translate(.5px, 2.5px) rotate(.5deg);
+		transform: translate(0.5px, 2.5px) rotate(0.5deg);
 	}
 
 	12% {
-		transform: translate(1.5px, 1.5px) rotate(.5deg);
+		transform: translate(1.5px, 1.5px) rotate(0.5deg);
 	}
 
 	14% {
-		transform: translate(.5px, .5px) rotate(.5deg);
+		transform: translate(0.5px, 0.5px) rotate(0.5deg);
 	}
 
 	16% {
-		transform: translate(-1.5px, -.5px) rotate(1.5deg);
+		transform: translate(-1.5px, -0.5px) rotate(1.5deg);
 	}
 
 	18% {
-		transform: translate(.5px, .5px) rotate(1.5deg);
+		transform: translate(0.5px, 0.5px) rotate(1.5deg);
 	}
 
 	20% {
@@ -145,23 +146,23 @@
 	}
 
 	22% {
-		transform: translate(.5px, -1.5px) rotate(1.5deg);
+		transform: translate(0.5px, -1.5px) rotate(1.5deg);
 	}
 
 	24% {
-		transform: translate(-1.5px, 1.5px) rotate(-.5deg);
+		transform: translate(-1.5px, 1.5px) rotate(-0.5deg);
 	}
 
 	26% {
-		transform: translate(1.5px, .5px) rotate(1.5deg);
+		transform: translate(1.5px, 0.5px) rotate(1.5deg);
 	}
 
 	28% {
-		transform: translate(-.5px, -.5px) rotate(-.5deg);
+		transform: translate(-0.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	30% {
-		transform: translate(1.5px, -.5px) rotate(-.5deg);
+		transform: translate(1.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	32% {
@@ -169,55 +170,55 @@
 	}
 
 	34% {
-		transform: translate(2.5px, 2.5px) rotate(-.5deg);
+		transform: translate(2.5px, 2.5px) rotate(-0.5deg);
 	}
 
 	36% {
-		transform: translate(.5px, -1.5px) rotate(.5deg);
+		transform: translate(0.5px, -1.5px) rotate(0.5deg);
 	}
 
 	38% {
-		transform: translate(2.5px, -.5px) rotate(-.5deg);
+		transform: translate(2.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	40% {
-		transform: translate(-.5px, 2.5px) rotate(.5deg);
+		transform: translate(-0.5px, 2.5px) rotate(0.5deg);
 	}
 
 	42% {
-		transform: translate(-1.5px, 2.5px) rotate(.5deg);
+		transform: translate(-1.5px, 2.5px) rotate(0.5deg);
 	}
 
 	44% {
-		transform: translate(-1.5px, 1.5px) rotate(.5deg);
+		transform: translate(-1.5px, 1.5px) rotate(0.5deg);
 	}
 
 	46% {
-		transform: translate(1.5px, -.5px) rotate(-.5deg);
+		transform: translate(1.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	48% {
-		transform: translate(2.5px, -.5px) rotate(.5deg);
+		transform: translate(2.5px, -0.5px) rotate(0.5deg);
 	}
 
 	50% {
-		transform: translate(-1.5px, 1.5px) rotate(.5deg);
+		transform: translate(-1.5px, 1.5px) rotate(0.5deg);
 	}
 
 	52% {
-		transform: translate(-.5px, 1.5px) rotate(.5deg);
+		transform: translate(-0.5px, 1.5px) rotate(0.5deg);
 	}
 
 	54% {
-		transform: translate(-1.5px, 1.5px) rotate(.5deg);
+		transform: translate(-1.5px, 1.5px) rotate(0.5deg);
 	}
 
 	56% {
-		transform: translate(.5px, 2.5px) rotate(1.5deg);
+		transform: translate(0.5px, 2.5px) rotate(1.5deg);
 	}
 
 	58% {
-		transform: translate(2.5px, 2.5px) rotate(.5deg);
+		transform: translate(2.5px, 2.5px) rotate(0.5deg);
 	}
 
 	60% {
@@ -225,7 +226,7 @@
 	}
 
 	62% {
-		transform: translate(-1.5px, .5px) rotate(1.5deg);
+		transform: translate(-1.5px, 0.5px) rotate(1.5deg);
 	}
 
 	64% {
@@ -233,7 +234,7 @@
 	}
 
 	66% {
-		transform: translate(.5px, 2.5px) rotate(1.5deg);
+		transform: translate(0.5px, 2.5px) rotate(1.5deg);
 	}
 
 	68% {
@@ -241,11 +242,11 @@
 	}
 
 	70% {
-		transform: translate(2.5px, 2.5px) rotate(.5deg);
+		transform: translate(2.5px, 2.5px) rotate(0.5deg);
 	}
 
 	72% {
-		transform: translate(-.5px, -1.5px) rotate(1.5deg);
+		transform: translate(-0.5px, -1.5px) rotate(1.5deg);
 	}
 
 	74% {
@@ -257,31 +258,31 @@
 	}
 
 	78% {
-		transform: translate(-1.5px, 2.5px) rotate(.5deg);
+		transform: translate(-1.5px, 2.5px) rotate(0.5deg);
 	}
 
 	80% {
-		transform: translate(-1.5px, .5px) rotate(-.5deg);
+		transform: translate(-1.5px, 0.5px) rotate(-0.5deg);
 	}
 
 	82% {
-		transform: translate(-1.5px, .5px) rotate(-.5deg);
+		transform: translate(-1.5px, 0.5px) rotate(-0.5deg);
 	}
 
 	84% {
-		transform: translate(-.5px, .5px) rotate(1.5deg);
+		transform: translate(-0.5px, 0.5px) rotate(1.5deg);
 	}
 
 	86% {
-		transform: translate(2.5px, 1.5px) rotate(.5deg);
+		transform: translate(2.5px, 1.5px) rotate(0.5deg);
 	}
 
 	88% {
-		transform: translate(-1.5px, .5px) rotate(1.5deg);
+		transform: translate(-1.5px, 0.5px) rotate(1.5deg);
 	}
 
 	90% {
-		transform: translate(-1.5px, -.5px) rotate(-.5deg);
+		transform: translate(-1.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	92% {
@@ -289,18 +290,19 @@
 	}
 
 	94% {
-		transform: translate(.5px, .5px) rotate(-.5deg);
+		transform: translate(0.5px, 0.5px) rotate(-0.5deg);
 	}
 
 	96% {
-		transform: translate(2.5px, -.5px) rotate(-.5deg);
+		transform: translate(2.5px, -0.5px) rotate(-0.5deg);
 	}
 
 	98% {
-		transform: translate(-1.5px, -1.5px) rotate(-.5deg);
+		transform: translate(-1.5px, -1.5px) rotate(-0.5deg);
 	}
 
-	0%, 100% {
+	0%,
+	100% {
 		transform: translate(0, 0) rotate(0);
 	}
 }
