--- a/waifu.css
+++ b/waifu.css
@@ -1,13 +1,13 @@
 #waifu-toggle {
-	background-color: #fa0;
-	border-radius: 5px;
-	bottom: 66px;
-	color: #fff;
+	background-color: #4b5e7b;
+	border-radius: 0.5em;
+	bottom: 60px;
+	color: #d2d2d2;
 	cursor: pointer;
 	font-size: 12px;
-	left: 0;
 	margin-left: -100px;
 	padding: 5px 2px 5px 5px;
+	left: 0;
 	position: fixed;
 	transition: margin-left 1s;
 	width: 60px;
@@ -29,7 +29,7 @@
 	margin-bottom: -10px;
 	position: fixed;
 	transform: translateY(3px);
-	transition: transform 0.3s ease-in-out bottom 1s ease-in-out;
+	transition: transform 0.3s ease-in-out;
 	z-index: 69;
 }
 
@@ -38,11 +38,12 @@
 }
 
 #waifu-tips {
-	animation: shake 50s ease-in-out 5s infinite;
-	background-color: rgba(236, 217, 188, 0.34);
+	/* animation: shake 50s ease-in-out 6s infinite; */
+	background-color: #fff;
+	color: #111;
 	border: 1px solid rgba(224, 186, 140, 0.62);
 	border-radius: 1em;
-	box-shadow: 0 3px 15px 2px rgba(191, 158, 118, 0.2);
+	box-shadow: 0 2px 2px 1px rgba(191, 158, 118, 0.12);
 	font-size: 12px;
 	line-height: 24px;
 	margin: -10px 20px;
@@ -50,8 +51,6 @@
 	overflow: hidden;
 	padding: 5px 10px;
 	position: absolute;
-	left: 0;
-	right: 0;
 	text-overflow: ellipsis;
 	transition: opacity 1s;
 	word-break: break-all;
@@ -68,9 +67,9 @@
 
 #live2d {
 	cursor: grab;
-	height: 270px;
+	height: 260px;
 	position: relative;
-	width: 270px;
+	width: 260px;
 }
 
 #live2d:active {
@@ -82,7 +81,7 @@
 	opacity: 0;
 	position: absolute;
 	right: 10px;
-	top: 70px;
+	top: 80px;
 	transition: opacity 1s;
 }
 
