--- a/waifu.css
+++ b/waifu.css
@@ -23,13 +23,13 @@
 }
 
 #waifu {
-	bottom: 0;
+	bottom: -500px;
 	left: 0;
 	line-height: 0;
 	margin-bottom: -10px;
 	position: fixed;
 	transform: translateY(3px);
-	transition: transform 0.3s ease-in-out;
+	transition: transform 0.3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 69;
 }
 
@@ -81,7 +81,7 @@
 	opacity: 0;
 	position: absolute;
 	right: 10px;
-	top: 80px;
+	top: 70px;
 	transition: opacity 1s;
 }
 
@@ -94,12 +94,14 @@
 	cursor: pointer;
 	display: block;
 	height: 30px;
+	width: 30px;
 	text-align: center;
 	transition: color 0.3s;
 }
 
 #waifu-tool .fa-lg:hover {
 	color: #0684bd;
+	/* font-size: 1.5em; */
 	/* #34495e */
 }
 
