--- a/waifu.css
+++ b/waifu.css
@@ -29,12 +29,14 @@
 	margin-bottom: -10px;
 	position: fixed;
 	transform: translateY(3px);
-	transition: transform 0.3s ease-in-out, bottom 3s ease-in-out;
+	transition: transform 0.3s ease-in-out, bottom 3s ease-in-out, opacity 1s;
 	z-index: 69;
+	opacity: 0.7;
 }
 
 #waifu:hover {
 	transform: translateY(0);
+	opacity: 1;
 }
 
 #waifu-tips {
@@ -80,7 +82,7 @@
 	color: #aaa;
 	opacity: 0;
 	position: absolute;
-	right: 10px;
+	right: 0px;
 	top: 70px;
 	transition: opacity 1s;
 }
@@ -95,6 +97,7 @@
 	display: block;
 	height: 30px;
 	width: 30px;
+	line-height: 1.75em;
 	text-align: center;
 	transition: color 0.3s;
 }
